--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,10 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
+# Environment Variables
+.env
+.env.local
+
 
 # Editor directories and files
 .vscode/*
